--- a/register.html
+++ b/register.html
@@ -55,7 +55,7 @@
                 <div class="well clearfix">
                    <div class="container-fluid">
                        <div class="col-md-6">
-                           <form class="form-horizontal" action='' method="POST">
+                           <form class="form-horizontal">
                               <fieldset>
                                 <div id="legend">
                                   <legend class="">Registro</legend>
@@ -102,7 +102,7 @@
                             </form>
                        </div>
                        <div class="col-md-6">
-                           <form class="form-horizontal" action='' method="POST">
+                           <form class="form-horizontal">
                               <fieldset>
                                 <div id="legend">
                                   <legend class="">Inicio de sesión</legend>
