Añadido el botón de enviar comentario

--- a/details.html
+++ b/details.html
@@ -78,6 +78,7 @@
                         <div class="form-group">
                             <label for="comment">Comenta:</label>
                             <textarea class="form-control" rows="5" id="comment"></textarea>
+                            <button class="btn btn-lg">Enviar</button>
                         </div>
                       </div>
                       <div id="comentarios" class="row">
