--- a/index.html
+++ b/index.html
@@ -3,21 +3,17 @@
     <link href="css/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/bootrstrap_mod.css" rel="stylesheet">
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="//cdn.auth0.com/js/lock/10.3.0/lock.min.js"></script>
+    <script src="auth0-variables.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
     <link href="css/simple-siderbar.css" rel="stylesheet">
-<<<<<<< HEAD
+        <script src="app.js"></script>
+
 
 </head>
 <body>
 
 
-=======
-
-</head>
-<body>
-
-
->>>>>>> DAW-2017/master
 <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
   <!-- El logotipo y el icono que despliega el menú se agrupan
        para mostrarlos mejor en los dispositivos móviles -->
@@ -31,11 +27,8 @@
     </button>
     <a class="navbar-brand" href="#">Logotipo</a>
   </div>
-<<<<<<< HEAD
 
-=======
-
->>>>>>> DAW-2017/master
+    
   <!-- Agrupar los enlaces de navegación, los formularios y cualquier
        otro elemento que se pueda ocultar al minimizar la barra -->
   <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -44,26 +37,19 @@
       <li><a href="#">Perfil</a></li>
       <li><a href="#">Favoritos</a></li>
     </ul>
-<<<<<<< HEAD
 
-=======
-
->>>>>>> DAW-2017/master
     <form class="navbar-form navbar-left" role="search">
       <div class="form-group">
         <input type="text" class="form-control" placeholder="Buscar">
       </div>
       <button type="submit" class="btn btn-default">Buscar</button>
     </form>
-<<<<<<< HEAD
 
-=======
-
->>>>>>> DAW-2017/master
     <ul class="nav navbar-nav navbar-right">
 
-      <li><a href="register.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-      <li><a id="log" data-toggle="modal" data-target="#myModal" href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      <li><a ><span  type="submit" class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+      <li>
+          <button type="submit" id="btn-login">Sign In</button>
     </ul>
   </div>
 </nav>
@@ -103,11 +89,7 @@
             <ul>
                 <li>
                     <div class="card">
-<<<<<<< HEAD
 
-=======
-
->>>>>>> DAW-2017/master
                             <!--Title-->
                             <h2 class="card-title">Montaña chula juas</h2>
                                 <!--Card image-->
@@ -123,19 +105,12 @@
                             </div>
     <!--/.Card content-->
 
-<<<<<<< HEAD
+
                     </div>
                 </li>
                 <li>
                                         <div class="card">
 
-=======
-                    </div>
-                </li>
-                <li>
-                                        <div class="card">
-
->>>>>>> DAW-2017/master
                             <!--Title-->
                             <h2 class="card-title">Montaña chula juas</h2>
                                 <!--Card image-->
@@ -151,7 +126,6 @@
                             </div>
     <!--/.Card content-->
 
-<<<<<<< HEAD
                     </div>
                 </li>
                 <li>
@@ -159,21 +133,10 @@
                     <a href="#">Acción #3</a>
                     </div>
                 </li>
-=======
-                    </div>
-                </li>
-                <li>
-                    <div>
-                    <a href="#">Acción #3</a>
-                    </div>
-                </li>
->>>>>>> DAW-2017/master
             </ul>
 
         </div>
     </div>
-<<<<<<< HEAD
+
 </body>
-=======
-</body>
->>>>>>> DAW-2017/master
+
