--- a/register.html
+++ b/register.html
@@ -1,10 +1,11 @@
 <head>
     <meta charset="utf-8">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="https://cdn.auth0.com/js/lock/10.9.1/lock.min.js"></script>
-
 </head>
 <body>
     <script>
@@ -76,13 +77,12 @@ Facebook like and share
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
         </nav>
-        
         <div class="row">
-            <div class="col-md-2"></div>
-            <div class="col-md-8">
+            <div class="col-md-3"></div>
+            <div class="col-md-6">
                 <div class="well clearfix">
                    <div class="container-fluid">
-                       <div class="col-md-6">
+                       <div class="col-md-12">
                            <form class="form-horizontal">
                               <fieldset>
                                 <div id="legend">
@@ -90,7 +90,7 @@ Facebook like and share
                                 </div>
                                 <div class="control-group">
                                   <!-- Username -->
-                                  <label class="control-label"  for="username">Nombre:</label>
+                                  <label class="control-label" for="username">Nombre:</label>
                                   <div class="controls">
                                     <input type="text" id="username" name="username" placeholder="" class="input-xlarge">
                                       <p class="help-block">¡Sin espacios!</p>
@@ -128,43 +128,64 @@ Facebook like and share
                                 </div>
                               </fieldset>
                             </form>
-                       </div>
-                       <div class="col-md-6">
-                           <form class="form-horizontal">
-                              <fieldset>
-                                <div id="legend">
-                                  <legend class="">Inicio de sesión</legend>
-                                </div>
-                                <div class="control-group">
-                                  <!-- E-mail -->
-                                  <label class="control-label" for="email">Correo:</label>
-                                  <div class="controls">
-                                    <input type="text" id="email" name="email" placeholder="" class="input-xlarge">
-                                    <p class="help-block">Tu correo usado para registrarte</p>
-                                  </div>
-                                </div>
-                                <div class="control-group">
-                                  <!-- Password-->
-                                  <label class="control-label" for="password">Contraseña</label>
-                                  <div class="controls">
-                                    <input type="password" id="password" name="password" placeholder="" class="input-xlarge">
-                                    <p class="help-block">¡Espero que la recuerdes!</p>
-                                  </div>
-                                </div>
-                                <div class="control-group">
-                                  <!-- Button -->
-                                  <div class="controls">
-                                    <button class="btn btn-default">Entrar</button>
-                                  </div>
-                                </div>
-                              </fieldset>
-                            </form>
+                           <legend>¿Ya estás registrado?</legend>
+                           <div id="boton" class="container">
+                               <button type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#loginModal">Inicia sesión</button>
+
+                               <!-- Modal de login -->
+
+                               <div id="loginModal" class="modal fade" role="dialog">
+                                   <div class="modal-dialog">
+                                       <!-- Contenido del modal -->
+                                       <div class="modal-content">
+                                           <!-- Modal encabezado -->
+                                           <div class="modal-header">
+                                               <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                               <h4 class="modal-title">Inicio de sesión</h4>
+                                           </div>
+                                           <div class="modal-body">
+                                               <!-- Contenido del modal -->
+
+                                                <form class="form-horizontal">
+                                                  <fieldset>
+                                                    <div class="control-group">
+                                                      <!-- E-mail -->
+                                                      <label class="control-label" for="email">Correo:</label>
+                                                      <div class="controls">
+                                                        <input type="text" id="email" name="email" placeholder="" class="input-xlarge">
+                                                        <p class="help-block">Tu correo usado para registrarte</p>
+                                                      </div>
+                                                    </div>
+                                                    <div class="control-group">
+                                                      <!-- Password-->
+                                                      <label class="control-label" for="password">Contraseña</label>
+                                                      <div class="controls">
+                                                        <input type="password" id="password" name="password" placeholder="" class="input-xlarge">
+                                                        <p class="help-block">¡Espero que la recuerdes!</p>
+                                                      </div>
+                                                    </div>
+                                                    <div class="control-group">
+                                                      <!-- Button -->
+                                                      <div class="controls">
+                                                        <button class="btn btn-default">Entrar</button>
+                                                      </div>
+                                                    </div>
+                                                  </fieldset>
+                                                </form>
+
+                                           </div>
+                                           <div class="modal-footer">
+                                               <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                                           </div>
+                                       </div>
+                                   </div>
+                               </div>
+                           </div>
                        </div>
                    </div>
-                    
                 </div>
             </div>
-            <div class="col-md-2"></div>
+            <div class="col-md-3"></div>
         </div>
     </div>
 </body>
