--- a/register.html
+++ b/register.html
@@ -6,6 +6,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
     <script src="https://cdn.auth0.com/js/lock/10.9.1/lock.min.js"></script>
+    <link type="text/css" rel="stylesheet" href="css/register.css">
 </head>
 <body>
     <script>
