--- a/index.html
+++ b/index.html
@@ -17,26 +17,43 @@
     <div id="header">
         <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
             <!-- El logotipo y el icono que despliega el menú se agrupan para mostrarlos mejor en los dispositivos móviles -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse"> <span class="sr-only">Desplegar navegación</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button> <a class="navbar-brand" href="#">Logotipo</a> </div>
+            <div id="logotipo" class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse"> <span class="sr-only">Desplegar navegación</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button> <a class="navbar-brand" href="#"></a> </div>
             <!-- Agrupar los enlaces de navegación, los formularios y cualquier otro elemento que se pueda ocultar al minimizar la barra -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Perfil</a></li>
-                    <li><a href="#">Favoritos</a></li>
-                </ul>
-                <form class="navbar-form navbar-left" role="search">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Buscar"> </div>
-                    <button type="submit" class="btn btn-default">Buscar</button>
-                </form>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a><span  type="submit" class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                    <li>
-                        <button type="submit" id="btn-login">Sign In</button>
-                </ul>
-            </div>
+                <div id="tabs">
+                    <ul class="nav navbar-nav">
+                        <li><a href="#">Inicio</a></li>
+                        <li><a href="#">Perfil</a></li>
+                        <li><a href="#">Favoritos</a></li>
+                        <li>
+                            <img alt="avatar" id="avatar" style="display:none;"></li>
+                        <li>
+                            <h2 id="welcome" style="display:none">Welcome <span id="nickname"></span></h2></li>
+                    </ul>
+                </div>
+                <div id="search">
+                    <form class="navbar-form navbar-left" role="search">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Buscar"> </div>
+                        <button type="submit" class="btn btn-default">Buscar</button>
+                    </form>
+                </div>
+                <div id="login">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <a id="btn-identification" type="submit" class="btn btn-sm btn-info"> <span class="glyphicon glyphicon-log-in"></span>Identificate </a>
+                        </li>
+                        <li>
+                            <a id="btn-logout" type="submit" class="btn btn-sm btn-info" style="display:none;"> <span class="glyphicon glyphicon-log-out"></span>Salir </a>
+                        </li>
+                    </ul>
+                </div>
+                <!--
+                <div id="user-info"> 
+                    <ul class="nav navbar-nav">
+                    </ul>
+                </div>--></div>
         </nav>
     </div>
     <div id="wrapper">
