agregado los iconos de like, fav y unlike
Se agrega fav, like, unlike y también se agregan viñetas

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
             <!-- El logotipo y el icono que despliega el menú se agrupan para mostrarlos mejor en los dispositivos móviles -->
             <div id="logotipo" class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse"> <span class="sr-only">Desplegar navegación</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button> <a class="navbar-brand" href="#"></a> </div>
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse"> <span class="sr-only">Desplegar navegación</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
+                <a class="navbar-brand" href="#"></a>
+            </div>
             <!-- Agrupar los enlaces de navegación, los formularios y cualquier otro elemento que se pueda ocultar al minimizar la barra -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <div id="tabs">
@@ -26,8 +28,7 @@
                         <li><a href="#">Inicio</a></li>
                         <li><a href="#">Perfil</a></li>
                         <li><a href="#">Favoritos</a></li>
-                        <li>
-                            <img alt="avatar" id="avatar" style="display:none;"></li>
+                        <li> <img alt="avatar" id="avatar" style="display:none;"></li>
                         <li>
                             <h2 id="welcome" style="display:none">Welcome <span id="nickname"></span></h2></li>
                     </ul>
@@ -72,36 +73,70 @@
         <!-- /.sidebar-collapse -->
         <!-- /.navbar-static-side -->
         <!-- /#sidebar-wrapper -->
-        <div class="well clearfix">Basic Well
+        <div class="well clearfix">
             <ul>
                 <li>
                     <div class="card">
                         <!--Title-->
-                        <h2 class="card-title">Montaña chula juas</h2>
-                        <!--Card image--><img class="img-fluid" src="http://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%282%29.jpg" alt="Card image cap">
+                        <h2 class="card-title">Mi dulce perro!</h2>
+                        <!--Card image--><img class="img-fluid" src="/img/vinetas/vineta1.jpg" alt="Card image cap">
                         <!--/.Card image-->
                         <!--Card content-->
                         <div class="card-block">
                             <!--Text-->
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> <a href="#" class="btn btn-primary">Button</a> </div>
+                            <p class="card-text">Es tan mono....</p>
+                        </div>
+                        <!--/.Card content-->
+                        <div class="row">
+                            <div class="btn-group" role="group">
+                                <button class="btn btn-warning">Añadir a favoritos</button>
+                                <button class="btn btn-primary"><span class="glyphicon glyphicon-thumbs-up"></span> Me gusta <span class="badge">42</span></button>
+                                <button class="btn btn-danger"><span class="glyphicon glyphicon-thumbs-down"></span> Lo odio <span class="badge">2</span></button>
+                                <br> </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="card">
+                        <!--Title-->
+                        <h2 class="card-title">Cruel verdad</h2>
+                        <!--Card image--><img class="img-fluid" src="/img/vinetas/vineta2.jpg" alt="Card image cap">
+                        <!--/.Card image-->
+                        <!--Card content-->
+                        <div class="card-block">
+                            <!--Text-->
+                            <p class="card-text">Forever alone hasta en cuantomeme!</p>
+                        </div>
+                        <div class="row">
+                            <div class="btn-group" role="group">
+                                <button class="btn btn-warning">Añadir a favoritos</button>
+                                <button class="btn btn-primary"><span class="glyphicon glyphicon-thumbs-up"></span> Me gusta <span class="badge">42</span></button>
+                                <button class="btn btn-danger"><span class="glyphicon glyphicon-thumbs-down"></span> Lo odio <span class="badge">2</span></button>
+                                <br> </div>
+                        </div>
                         <!--/.Card content-->
                     </div>
                 </li>
                 <li>
                     <div class="card">
                         <!--Title-->
-                        <h2 class="card-title">Montaña chula juas</h2>
-                        <!--Card image--><img class="img-fluid" src="http://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%282%29.jpg" alt="Card image cap">
+                        <h2 class="card-title">Hijo Troll!</h2>
+                        <!--Card image--><img class="img-fluid" src="/img/vinetas/vineta3.jpg" alt="Card image cap">
                         <!--/.Card image-->
                         <!--Card content-->
                         <div class="card-block">
                             <!--Text-->
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> <a href="#" class="btn btn-primary">Button</a> </div>
+                            <p class="card-text">Cuando tienes un hijo mas troll que tú.</p>
+                        </div>
+                        <div class="row">
+                            <div class="btn-group" role="group">
+                                <button class="btn btn-warning">Añadir a favoritos</button>
+                                <button class="btn btn-primary"><span class="glyphicon glyphicon-thumbs-up"></span> Me gusta <span class="badge">42</span></button>
+                                <button class="btn btn-danger"><span class="glyphicon glyphicon-thumbs-down"></span> Lo odio <span class="badge">2</span></button>
+                                <br> </div>
+                        </div>
                         <!--/.Card content-->
                     </div>
-                </li>
-                <li>
-                    <div> <a href="#">Acción #3</a> </div>
                 </li>
             </ul>
         </div>
