--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <div class="card">
                         <!--Title-->
                         <h2 class="card-title">Mi dulce perro!</h2>
-                        <!--Card image--><img class="img-fluid" src="/img/vinetas/vineta1.jpg" alt="Card image cap">
+                        <!--Card image--><img class="img-responsive" src="/img/vinetas/vineta1.jpg" alt="Card image cap">
                         <!--/.Card image-->
                         <!--Card content-->
                         <div class="card-block">
@@ -100,7 +100,7 @@
                     <div class="card">
                         <!--Title-->
                         <h2 class="card-title">Cruel verdad</h2>
-                        <!--Card image--><img class="img-fluid" src="/img/vinetas/vineta2.jpg" alt="Card image cap">
+                        <!--Card image--><img class="img-responsive" src="/img/vinetas/vineta2.jpg" alt="Card image cap">
                         <!--/.Card image-->
                         <!--Card content-->
                         <div class="card-block">
@@ -121,7 +121,7 @@
                     <div class="card">
                         <!--Title-->
                         <h2 class="card-title">Hijo Troll!</h2>
-                        <!--Card image--><img class="img-fluid" src="/img/vinetas/vineta3.jpg" alt="Card image cap">
+                        <!--Card image--><img class="img-responsive" src="/img/vinetas/vineta3.jpg" alt="Card image cap">
                         <!--/.Card image-->
                         <!--Card content-->
                         <div class="card-block">
