Añadido el autor en la página de detalles

--- a/details2.html
+++ b/details2.html
@@ -220,13 +220,14 @@
                                     <div class="container-fluid">
                                         <div class="row">
                                             <div class="col-md-4">
-                                                <div id="autor" class="card text-center">
-                                                    <img id="avatarAutor" class="card-img-top img-responsive img-center" src="https://pbs.twimg.com/profile_images/648889317503336449/MU7PrqD_.jpg">
-                                                    <div class="card-block">
-                                                        <h3 class="card-title">Usuario</h3>
-                                                        <a href="#" class="btn btn-primary text-center">Ir a su perfil</a>
+                                               <button class="btn autor">
+                                                   <div id="autor" class="card text-center">
+                                                        <img id="avatarAutor" class="card-img-top img-responsive img-center" src="https://pbs.twimg.com/profile_images/648889317503336449/MU7PrqD_.jpg">
+                                                        <div class="card-block">
+                                                            <h3 class="card-title">Usuario</h3>
+                                                        </div>
                                                     </div>
-                                                </div>
+                                               </button>
                                             </div>
                                             <div class="col-md-8">
 
