mi adaptación de index

--- a/based-on-template/details2.html
+++ b/based-on-template/details2.html
@@ -11,11 +11,11 @@
     <title>SB Admin - Bootstrap Admin Template</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/css-sb/bootstrap.min.css" rel="stylesheet">
+    <link href="../css-based-on-template/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/css-sb/sb-admin.css" rel="stylesheet">
-    <link href="css/details.css" rel="stylesheet">
+    <link href="../css-based-on-template/sb-admin.css" rel="stylesheet">
+    <link href="../css-based-on-template/details/details.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
