--- a/based-on-template/index.html
+++ b/based-on-template/index.html
@@ -19,7 +19,7 @@
     <link href="../css-based-on-template/index/index.css" rel="stylesheet">
     
     <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -201,8 +201,76 @@
                     <h1>Hello, world!</h1>
                     <img class="img-responsive" src="../img/vinetas/imgres.jpg">
                     <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-                    <p><a href="#" class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a>
+                    <p>
                     </p>
+                                              <div id="social" class="row">
+                            <hr>
+                            <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
+                            <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i><div class="badge">30</div></button>
+                            <button type="button" class="btn btn-danger btn-circle btn-lg"><i class="fa fa-thumbs-down"></i><div class="badge">5</div></button>
+                            <br>
+                            <br>
+                          </div>
+                </div>
+                                <div class="jumbotron">
+                    <h1>Hello, world!</h1>
+                    <img class="img-responsive" src="../img/vinetas/vineta1.jpg">
+                    <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+                    <p>
+                    </p>
+                                              <div id="social" class="row">
+                            <hr>
+                            <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
+                            <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i><div class="badge">30</div></button>
+                            <button type="button" class="btn btn-danger btn-circle btn-lg"><i class="fa fa-thumbs-down"></i><div class="badge">5</div></button>
+                            <br>
+                            <br>
+                          </div>
+                </div>
+                                <div class="jumbotron">
+                    <h1>Hello, world!</h1>
+                    <img class="img-responsive" src="../img/vinetas/vineta2.jpg">
+                    <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+                    <p>
+                    </p>
+                                              <div id="social" class="row">
+                            <hr>
+                            <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
+                            <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i><div class="badge">30</div></button>
+                            <button type="button" class="btn btn-danger btn-circle btn-lg"><i class="fa fa-thumbs-down"></i><div class="badge">5</div></button>
+                            <br>
+                            <br>
+                          </div>
+                </div>
+                                <div class="jumbotron">
+                    <h1>Hello, world!</h1>
+                    <img class="img-responsive" src="../img/vinetas/vineta3.jpg">
+                    <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+                    <p>
+                    </p>
+                                              <div id="social" class="row">
+                            <hr>
+                            <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
+                            <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i><div class="badge">30</div></button>
+                            <button type="button" class="btn btn-danger btn-circle btn-lg"><i class="fa fa-thumbs-down"></i><div class="badge">5</div></button>
+                            <br>
+                            <br>
+                          </div>
+                </div>
+                                <div class="jumbotron">
+                    <h1>Hello, world!</h1>
+                    <img class="img-responsive" src="../img/vinetas/vineta4.jpg">
+                    <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+                    <p>
+                    </p>
+                                              <div id="social" class="row">
+                            <hr>
+                            <button type="button" class="btn btn-warning btn-circle btn-lg"><span class="fa fa-star" aria-hidden="true"></span></button>
+                            <button type="button" class="btn btn-success btn-circle btn-lg"><i class="fa fa-thumbs-up"></i><div class="badge">30</div></button>
+                            <button type="button" class="btn btn-danger btn-circle btn-lg"><i class="fa fa-thumbs-down"></i><div class="badge">5</div></button>
+                            <br>
+                            <br>
+                          </div>
                 </div>
 
 
