--- a/index3.html
+++ b/index3.html
@@ -9,12 +9,12 @@
     <meta name="author" content="">
     <title>SB Admin - Bootstrap Admin Template</title>
     <!-- Bootstrap Core CSS -->
-    <link href="../css-based-on-template/bootstrap.min.css" rel="stylesheet">
+    <link href="/css-based-on-template/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link href="../css-based-on-template/sb-admin.css" rel="stylesheet">
-    <link href="../css-based-on-template/index/index.css" rel="stylesheet">
+    <link href="/css-based-on-template/sb-admin.css" rel="stylesheet">
+    <link href="/css-based-on-template/index/index.css" rel="stylesheet">
     <!-- Custom Fonts -->
-    <link href="../font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <script src="//cdn.auth0.com/js/lock/10.3.0/lock.min.js"></script>
     <script src="auth0-variables.js"></script>
     <script src="app.js"></script>
@@ -91,7 +91,7 @@
                         <li> <a href="#">View All</a> </li>
                     </ul>
                 </li>
-                <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> John Smith <b class="caret"></b></a>
+                <li style="display:none" id="" class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> John Smith <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li> <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a> </li>
                         <li> <a href="#"><i class="fa fa-fw fa-envelope"></i> Inbox</a> </li>
@@ -100,9 +100,10 @@
                         <li> <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a> </li>
                     </ul>
                 </li>
-                <li> </li>
-            </ul> 
-            <img alt="avatar" id="avatar" style="display:none;">
+                <li id="btn-login">
+                    <a><i class="fa fa-user"></i> Identificate <b></b></a>
+                </li>
+            </ul> <img alt="avatar" id="avatar" style="display:none;">
             <p>Welcome <span id="nickname"></span></p>
             <button type="submit" id="btn-login">Sign In</button>
             <button type="submit" id="btn-logout" style="display:none;">Sign Out</button>
