--- a/index3.html
+++ b/index3.html
@@ -91,7 +91,7 @@
                         <li> <a href="#">View All</a> </li>
                     </ul>
                 </li>
-                <li style="display:none" id="" class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> John Smith <b class="caret"></b></a>
+                <li style="display:none" id="user-info" class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> John Smith <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li> <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a> </li>
                         <li> <a href="#"><i class="fa fa-fw fa-envelope"></i> Inbox</a> </li>
@@ -100,13 +100,10 @@
                         <li> <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a> </li>
                     </ul>
                 </li>
-                <li id="btn-login">
-                    <a><i class="fa fa-user"></i> Identificate <b></b></a>
+                <li>
+                    <a id="btn-login" class="btn btn-sm btn-primary"><span class="glyphicon glyphicon-user"></span> Identificate</a>
                 </li>
-            </ul> <img alt="avatar" id="avatar" style="display:none;">
-            <p>Welcome <span id="nickname"></span></p>
-            <button type="submit" id="btn-login">Sign In</button>
-            <button type="submit" id="btn-logout" style="display:none;">Sign Out</button>
+            </ul>
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
