--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
                             <li> <a href="#">Feels good man</a> </li>
                         </ul>
                     </li>
+                    <li> <a href="javascript:;" data-toggle="collapse" data-target="#perfil"><i class="fa fa-info-circle fa-1x" aria-hidden="true"></i> Perfil <i class="fa fa-fw fa-caret-down"></i></a>
+                        <ul id="perfil" class="collapse">
+                            <li> <a href="pepe.html">Resumen</a> </li>
+                            <li> <a href="#">Publicados</a> </li>
+                            <li> <a href="#">Favoritos</a> </li>
+                            <li> <a href="#">Seguidos</a> </li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
