andes botton follow

--- a/details2.html
+++ b/details2.html
@@ -105,7 +105,9 @@
                                                 <button class="btn autor">
                                                     <div id="autor" class="card text-center"> <img id="avatarAutor" class="card-img-top img-responsive img-center" src="https://pbs.twimg.com/profile_images/648889317503336449/MU7PrqD_.jpg">
                                                         <div class="card-block">
-                                                            <h3 class="card-title">Usuario</h3> </div>
+                                                            <h3 class="card-title">Kike9</h3>
+                                                            <button class="btn btn-sm"><i class="fa fa-check" aria-hidden="true"></i> Le sigues</button> 
+                                                        </div>
                                                     </div>
                                                 </button>
                                             </div>
